--- a/apps/dashboard/src/app/(public)/(legal)/privacy-policy/page.mdx
+++ b/apps/dashboard/src/app/(public)/(legal)/privacy-policy/page.mdx
@@ -29,11 +29,11 @@ These logs **are accessible only by the developers**.
 
 Internal logs **are used exclusively for analytics, reporting, and abuse prevention purposes**.
 
-#### Information Retained in Logs:
-
-- The **ID and name of the user** who executed the command.
-- The **ID and name of the server** where the command was executed.
-- The **ID and name of the command** that was executed.
-- The **date and time** when the command was executed.
+| Information Retained in Logs                                      |
+| ----------------------------------------------------------------- |
+| The **ID and name of the user** who executed the command.         |
+| The **ID and name of the server** where the command was executed. |
+| The **ID and name of the command** that was executed.             |
+| The **date and time** when the command was executed.              |
 
 [FancyStudioGitHubProfile]: https://github.com/FancyStudioTeam
