chore: update legal pages

--- a/apps/dashboard/src/app/(public)/legal/privacy-policy/content.mdx
+++ b/apps/dashboard/src/app/(public)/legal/privacy-policy/content.mdx
@@ -1,19 +1,19 @@
 # Definitions
 
-| Term          | Description                                                                 |
-| ------------- | --------------------------------------------------------------------------- |
-| **"We"**      | Refers to the owners and developers of Vanguard.                            |
-| **"Service"** | Refers to the Vanguard application and all related services provided by us. |
-| **"User"**    | Refers to any individual who accesses and uses our service.                 |
+| Term      | Description                                                                 |
+| --------- | --------------------------------------------------------------------------- |
+| "We"      | Refers to the owners and developers of Vanguard.                            |
+| "Service" | Refers to the Vanguard application and all related services provided by us. |
+| "User"    | Refers to any individual who accesses and uses our service.                 |
 
 # Stored Information
 
 The service stores only the information necessary for its proper operation.
 
-| Information    | Purpose                                                                                        |
-| -------------- | ---------------------------------------------------------------------------------------------- |
-| **User IDs**   | Stored solely for the purpose of linking data or configurations related to individual users.   |
-| **Server IDs** | Stored solely for the purpose of linking data or configurations related to individual servers. |
+| Information | Purpose                                                                                        |
+| ----------- | ---------------------------------------------------------------------------------------------- |
+| User IDs    | Stored solely for the purpose of linking data or configurations related to individual users.   |
+| Server IDs  | Stored solely for the purpose of linking data or configurations related to individual servers. |
 
 ## Internal Logs
 
